<resources>
    <string name="app_name">GuideRobot</string>

    <string name="welcome_msg">Welcome to the Guide Robot App</string>
    <string name="welcome_description">Welcome to the Guide Robot App.Select between Creating a new Account or Login.</string>
    <string name="create_account">Create Account</string>
    <string name="create_account_description">Go to Create Account Form</string>
    <string name="login">Login</string>
    <string name="login_description">Go to Login Form</string>
    <string name="registration_form_description">Fill out the registration form.</string>
    <string name="registration_form">New Account Registration Form</string>
    <string name="next">Next</string>
    <string name="next_page">Go to Next Page</string>
    <string name="enter_email">Enter Email</string>
    <string name="need_help">Need Help?</string>
    <string name="first_and_last_name_form_description">Fill out First and Last Name fields.</string>
    <string name="first_and_last_name_form">First and Last Name Form</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="height_form">Fill out your height</string>
    <string name="height_form_description">Fill out your Height </string>
    <string name="feet">Feet</string>
    <string name="enter_height_in_feet">Enter height in feet</string>
    <string name="enter_height_in_inches">Enter height in inches</string>
    <string name="inches">Inches</string>
    <string name="got_to_help_screen">Got to Help Screen.</string>
    <string name="password_form">Fill out your Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="create_new_account">Create new Account</string>
    <string name="login_form">Welcome back.Please login.</string>
    <string name="login_form_description">Welcome back.Please login.Fill out email and password fields.</string>
    <string name="submit">Submit</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_description">Go to Bluetooth Screen</string>
    <string name="enable_bluetooth">Enable Bluetooth</string>
    <string name="select_device_to_pair">Select device to Pair</string>
    <string name="start_scanning">Start Scanning</string>
    <string name="pair_to_device">Pair to Robot</string>
    <string name="scanning_in_progress">Scanning in Progress …</string>
    <string name="scanning_completed">Scanning Completed</string>
    <string name="bluetooth_is_disable">Bluetooth is Disable</string>
    <string name="enter_command">Enter Command</string>
    <string name="send">Send</string>
    <string name="command_sent">Command Sent</string>
    <string name="command_failed">Command Failed</string>
    <string name="send_command_to_device">Send Command to Device</string>
    <string name="dashboard">Dashboard</string>
    <string name="dashboard_description">Got to Dashboard Screen</string>
    <string name="setting">Setting</string>
    <string name="setting_description">Go to Setting Screen</string>
    <string name="logout">Logout</string>
    <string name="start_connection">Connect to Robot</string>
    <string name="connection_success">Connected to Robot</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="go_forward">Go Forward</string>
    <string name="go_in_circles">Go in Circles</string>
    <string name="draw_square">Draw a Square</string>
    <string name="mic_description_email">Select microphone to Dictate your Email</string>
    <string name="mic_description_FirstLastName">Select microphone to Dictate your First and Last Name</string>
    <string name="mic_description_email_off">Voice Recognition is not Available. Microphone</string>
    <string name="email_cannot_be_empty">Field for email can\'t be empty</string>
    <string name="email_not_valid">Please enter a valid email address</string>
    <string name="field_cannot_be_empty">Field can\'t be empty</string>
    <string name="name_long">Name is too long.No more than 25 characters</string>
    <string name="password_letters">Password must include a letter</string>
    <string name="password_digits">Password must include at least one digit</string>
    <string name="password_whiteSpaces">No white spaces allowed</string>
    <string name="password_characters">Password must be at least 6 characters long</string>
    <string name="take_me_to_the_door">Take me to the Door</string>
    <string name="take_me_to_option_2">Take me to Option 2</string>
    <string name="take_me_to_option_3">Take me to Option 3</string>
    <string name="take_me_to_option_4">Take me to option 4</string>
    <string name="shutdown_robot">Shutdown Robot</string>
    <string name="select_microphone">Select Microphone</string>
    <string name="mic_description_dashboard">Voice Recognition is not Available. Microphone</string>
    <string name="go_to_docking_station">Go To Docking Station</string>
</resources>
