<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundgradient_1"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="25dp"
    android:focusable="false"
    android:importantForAccessibility="no"
    tools:context=".ui.mainactivity.HomeFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:minWidth="50dp"
        android:minHeight="50dp">

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_border"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:contentDescription="@string/welcome_description"
            android:text="@string/welcome_msg"
            android:textAlignment="center"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="30sp"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:focusable="true"
        android:background="@drawable/button_background"
        android:contentDescription="@string/create_account_description"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:text="@string/create_account"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:focusable="true"
        android:background="@drawable/button_background"
        android:contentDescription="@string/login_description"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:text="@string/login"
        android:textSize="30sp"
        android:textStyle="bold" />
</LinearLayout>