<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="25dp"
    tools:context=".RegistrationHeightFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@null"
            android:minWidth="50dp"
            android:minHeight="50dp">

            <TextView
                android:id="@+id/firstLastNameTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/height_form"
                android:text="@string/height_form"
                android:textAlignment="center"
                android:textColor="#100F0F"
                android:textSize="30sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:id="@+id/feetRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:focusable="true"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/FeetTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:labelFor="@+id/heightFeetEditText"
                android:contentDescription="@string/feet_row"
                android:text="@string/feet"
                android:textAlignment="center"
                android:textColor="#070606"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/heightFeetEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:ems="10"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:hint="@string/enter_height_in_feet"
                android:labelFor="@+id/heightFeetEditText"
                android:inputType="number"
                android:minWidth="50dp"
                android:minHeight="50dp"
                android:textSize="18sp" />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/inchesRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/InchesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:labelFor="@+id/heightInchesEditText"
                android:contentDescription="@string/inches_row"
                android:text="@string/inches"
                android:textAlignment="center"
                android:textColor="#070606"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/heightInchesEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:ems="10"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:hint="@string/enter_height_in_inches"
                android:inputType="number"
                android:minWidth="50dp"
                android:minHeight="50dp"
                android:textSize="18sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/nextPageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/next"
            android:contentDescription="@string/next_page"
            android:minWidth="50dp"
            android:minHeight="50dp"/>

        <TextView
            android:id="@+id/needHelpTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/got_to_help_screen"
            android:ems="10"
            android:minWidth="50dp"
            android:minHeight="75dp"
            android:text="@string/need_help"
            android:textAlignment="center"
            android:textColor="#050505"
            android:textSize="24sp" />

    </LinearLayout>

</FrameLayout>