<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/registrationFragment"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="25dp"
    tools:context=".RegistrationFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@null"
            android:minWidth="50dp"
            android:minHeight="75dp">

            <TextView
                android:id="@+id/registrationTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/registration_form"
                android:text="@string/registration_fragment_lorem_ipsum"
                android:textAlignment="center"
                android:textColor="#100F0F"
                android:textSize="30sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/enter_email"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:minWidth="50dp"
            android:minHeight="75dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/nextPageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/next"
            android:contentDescription="@string/next_page"
            android:minWidth="50dp"
            android:minHeight="50dp"/>

        <TextView
            android:id="@+id/needHelpTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/need_help"
            android:ems="10"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:text="@string/need_help"
            android:textAlignment="center"
            android:textColor="#050505"
            android:textSize="24sp" />

    </LinearLayout>

</FrameLayout>