<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="15dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".DashboardActivity">

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/bluetoothTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:padding="13dp"
            android:text="@string/bluetooth"
            android:textAlignment="center"
            android:textColor="#070505"
            android:textSize="32sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/bluetoothLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/bluetooth_is_disable"
            android:layout_margin="5dp"
            android:minWidth="60dp"
            android:minHeight="60dp"
            android:focusable="true"
            android:src="@drawable/ic_bluetooth_disabled" />
    </RelativeLayout>

    <EditText
        android:id="@+id/commandEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/enter_command"
        android:inputType="textPersonName"
        android:text="@android:string/ok" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendCommand"
        android:layout_marginTop="50dp"
        android:text="@string/send"
        android:contentDescription="@string/send_command_to_device"/>
    <TextView
        android:id="@+id/feedback_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:accessibilityLiveRegion="polite"
        android:background="@null"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:padding="10dp"
        tools:visibility="invisible" />
</LinearLayout>