<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="25dp"
    tools:context=".PairDeviceActivity">

    <TextView
        android:id="@+id/bluetoothTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/pair_to_device"
        android:textAlignment="center"
        android:textColor="#2979FF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/devicesList"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/select_device_to_pair" />

    <Button
        android:id="@+id/scanningBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:onClick="startScanningForDevices"
        android:text="@string/start_scanning"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="#111111" />

    <TextView
        android:id="@+id/feedback_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:accessibilityLiveRegion="polite"
        android:background="@null"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:padding="10dp"
        tools:visibility="invisible" />

</LinearLayout>